Feat: Complete solution product